# MPCHonestMajorityNoTriples

./: .gitignore  1000000G_1000000MG_333In_50Out_20D_OutputOne3P.txtTimes1ZpMensenne61HIMDNBatch.csv  1000000G_1000000MG_333In_50Out_20D_OutputOne3P.txtTimes1ZpMensenne61HIMDNSingle.csv  1000000G_1000000MG_333In_50Out_20D_OutputOne3P.txtTimes1ZpMensenneHIMDNBatch.csv  1000000G_1000000MG_333In_50Out_20D_OutputOne3P.txtTimes2ZpMensenne61HIMDNBatch.csv  1000000G_1000000MG_333In_50Out_20D_OutputOne3P.txtTimes2ZpMensenne61HIMDNSingle.csv  1000000G_1000000MG_333In_50Out_20D_OutputOne3P.txtTimes2ZpMensenneHIMDNBatch.csv  1000000G_1000000MG_333In_50Out_20D_OutputOne3P.txtTimes3ZpMensenne61HIMDNBatch.csv  1000000G_1000000MG_333In_50Out_20D_OutputOne3P.txtTimes3ZpMensenne61HIMDNSingle.csv  1000000G_1000000MG_333In_50Out_20D_OutputOne3P.txtTimes3ZpMensenneHIMDNBatch.csv  100000G_100000MG_100In_50Out_20D_OutputOne10P.txt  100000G_100000MG_10In_50Out_20D_OutputOne100P.txt  100000G_100000MG_11In_50Out_20D_OutputOne90P.txt  100000G_100000MG_12In_50Out_20D_OutputOne80P.txt  100000G_100000MG_14In_50Out_20D_OutputOne70P.txt  100000G_100000MG_16In_50Out_20D_OutputOne60P.txt  100000G_100000MG_20In_50Out_20D_OutputOne50P.txt  100000G_100000MG_25In_50Out_20D_OutputOne40P.txt  100000G_100000MG_33In_50Out_20D_OutputOne30P.txt  100000G_100000MG_50In_50Out_20D_OutputOne20P.txt  100000G_100000MG_9In_50Out_20D_OutputOne110P.txt  CMakeCache.txt  CMakeLists.txt  HIM.h  MPCCommunication.cpp  MPCCommunication.h  MPCHonestMajorityNoTriples.cbp  Makefile  Protocol.h  ProtocolParty.cpp  ProtocolParty.h  ProtocolTimer.cpp  ProtocolTimer.h  README.md  TemplateField.cpp  TemplateField.h  VDM.h  VDMTranspose.cpp  VDMTranspose.h  cmake_install.cmake  (+2 more)
